--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://imemirhan.github.io/portfolio",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.1",
@@ -11,6 +12,7 @@
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
     "react": "^19.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
@@ -25,6 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "tailwind:init": "tailwindcss init -p"
   },
   "eslintConfig": {
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
   }
